--- a/wth_foundation/pcwsr/trunk/ChangeLog
+++ b/wth_foundation/pcwsr/trunk/ChangeLog
@@ -1,3 +1,6 @@
+Version 0.1.3.
+  Bug fixed: negative temperatures, IO redirection
+
 Version 0.1.2.
   Handling all types of sensors (untested!)
   timestamp compiles w/o error
