--- a/wth_foundation/pcwsr/trunk/AUTHORS
+++ b/wth_foundation/pcwsr/trunk/AUTHORS
@@ -1,4 +1,6 @@
-Author:
+Authors:
 ---------------------------------------
 Volker Jahns <Volker.Jahns@thalreit.de>
+Martin Johnson <pcwsr@martinshouse.com>
+Ulrich Vigenschow <vigger@t-online.de>
 
