--- a/wth_foundation/pcwsr/trunk/ChangeLog
+++ b/wth_foundation/pcwsr/trunk/ChangeLog
@@ -1,3 +1,7 @@
+Version 0.1.4. 
+  SIGHUP and SIGINT trapping, non-blocking IO, output format options
+  rain is 0.37 times output impulses in mm
+	
 Version 0.1.3.
   Bug fixed: negative temperatures, IO redirection
 
