--- a/wth_foundation/wth/trunk/README
+++ b/wth_foundation/wth/trunk/README
@@ -18,3 +18,44 @@ The code is seperated in three parts:
 (3) the wthc client code either reads the PC interface or connects
     to the wthd server to retrieve data.
 
+As an asset, xmlrpc support has been added. The xmlrpc server 
+wthxmld uses Eric Kidd's xmlrpc-c. The wthxc client code allows
+to retrieve the weatherstation data. For demonstration purposes
+a simple perl client - wth-xmlrpc - has been added as well.
+RPC methods have been implemented to represent the protocol of
+the WS2000 weatherstations. The return values are base64 encoded 
+by the wthxmld server.
+
+The wthxmld server needs a configuration file which is provided
+in subdirectoy abyss/conf as file abyss.conf .
+
+The wth-xmlrpc perl client uses  the perl module Frontier::Client
+which must be installed for proper function.
+
+
+Troubleshooting
+---------------
+
+FreeBSD
+-------
+Upgrading to FreeBSD 4.5 caused wthc to exit with timeout:
+
+wthc -c0 -s -v
+
+The following syslog messages occured:
+
+Mar 19 21:50:58 pegasus wthc[40810]: experimental test release 0.4.2 - December 2001 
+Mar 19 21:50:58 pegasus wthc[40810]: wcmd: called for command request: 0 
+Mar 19 21:50:58 pegasus wthc[40810]: initserial: error fcntl: Inappropriate ioctl for device
+
+Problem was that /dev hasn't been upgraded. Remake of device files
+in /dev
+
+sh MAKEDEV all
+
+solved the issue.
+
+wthc had been compiled with GNU build chain.
+./generate_build
+./configure 
+gmake wthc
