--- a/wth_foundation/wth/trunk/doc/wthc.1
+++ b/wth_foundation/wth/trunk/doc/wthc.1
@@ -72,7 +72,7 @@ recursive combination of command 1 and 2.
 \fI/etc/wth/wth.conf\fR
 wthc configuration file
 .SH "SEE ALSO"
-wthd(1)
+wthd(1), wth.conf(5)
 .SH BUGS
 Prototype version. Network code probably unreliable.
 
