--- a/wth_foundation/wth/trunk/doc/wthd.1
+++ b/wth_foundation/wth/trunk/doc/wthd.1
@@ -18,6 +18,6 @@ use portnumber to listen on, default is 3900.
 \fB-d\fP
 do not daemonize, stay in foreground
 .SH "SEE ALSO"
-wthc(1), telnet(1)
+wthc(1), wth.conf(5), telnet(1)
 .SH BUGS
 Prototype version. Network code probably unreliable.
