--- a/wth_foundation/wth/trunk/ChangeLog
+++ b/wth_foundation/wth/trunk/ChangeLog
@@ -1,8 +1,10 @@
+wth - experimental test release 0.4.2.1
+- undocumented wind mean deviation is available now
+- improved GNU build chain
+- documentation updated
+
 wth -experimental test release 0.4.2
 - added xmlrpc support, this includes new client and server software
-- bug fixed: mean deviation of wind direction is undocumented part 
-  of communication protocol
-- GNU build improved: checking for xmlrpc-c installation
 
 wth - experimental test release 0.4.1
 - config file problem fixed - wouldn't read any config file
