--- a/wth_foundation/wth/trunk/ChangeLog
+++ b/wth_foundation/wth/trunk/ChangeLog
@@ -1,7 +1,7 @@
 wth - experimental test release 
 release 0.4.5
 - bugfix segmentation fault
-- SI units default
+- SI units default, but can now do US units
 
 release	0.4.4
 - postgres support for data storage
