--- a/wth_foundation/wth/trunk/README
+++ b/wth_foundation/wth/trunk/README
@@ -217,3 +217,11 @@ wthc had been compiled with GNU build chain.
 ./generate_build
 ./configure 
 gmake wthc
+
+
+gcc-4.2 issue
+-------------
+
+Compiling wthc with gcc-4.2 will issue some warnings about incompatible pointers
+Running wthc will cause a segmentation fault
+Compile wthc using gcc-3.4, no errors at compile time, running smoothly
