--- a/wth_foundation/wth/trunk/README
+++ b/wth_foundation/wth/trunk/README
@@ -65,6 +65,7 @@ exec <weatherstation> <command>
 restart
 reload <weatherstation>
 
+<weatherstation> in ws2000, pcwsr
 
 
 Troubleshooting
@@ -84,18 +85,17 @@ Units of meteorological observations
 ------------------------------------
 Atmospheric pressure, p, [hPa]
 Temperature, t, [deg C] or T [Kelvin]
-Wind speed, metres per second [ m  s^-1 ]
+Wind speed, metres per second [ m  s-1 ]
 Wind direction, degrees clockwise from or on the scale 0-36, wehre 36 is the wind from the north and 09 is wind from east [deg]
 Relative humidity, U, [%]
-Precipitation (total amount), [mm  m^-2] or [kg  m^-2]
-Precipitation intensity, R_i, [ mm  h^-1 ] or [kg m^-2 s-1]
+Precipitation (total amount), [mm  m-2] or [kg  m-2]
+Precipitation intensity, R_i, [ mm  h-1 ] or [kg m-2 s-1]
 
 Visibility, [m]
-Irradiance [ W m^-2] and Radiant exposure, [ J m^-2]
+Irradiance [ W m-2] and Radiant exposure, [ J m-2]
 Duration of sunshine, [h]
 Cloud height [m]
 Cloud amount [okta]
 
 Reference: Guide to Meterological Instruments and Methods of Observation, 7th edition, WMO-No.8, World Meterological Organization, Geneva, Switzerland, 2006
-
 
