--- a/wth_foundation/wth/trunk/README
+++ b/wth_foundation/wth/trunk/README
@@ -11,6 +11,7 @@ wth is a free software solution to read sensor data of
 - Peetbros Ultimeter weatherstations
   -- datalogger mode
   -- packet mode
+  -- complete mode
 data is stored in sqlite database
 
 Compiling
